[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zlink"
version = "0.9.0"
description = "zlink Python bindings — high-performance async messaging library"
license = {text = "MPL-2.0"}
authors = [{name = "ulalax"}]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ulala-x/zlink"
Repository = "https://github.com/ulala-x/zlink"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
